# operations-debs-varnish-modules

./: .gitignore  .gitreview  .travis.yml  CHANGES.rst  Makefile.am  README.rst  configure.ac  test-vclsnippet  varnish-modules_0.15.0.orig.tar.gz.delta  varnish-modules_0.15.0.orig.tar.gz.id
debian/: changelog  control  copyright  gbp.conf  rules  varnishtest_nss_wrapper_hosts  watch
debian/patches/: 0001-no-cookie-overflow-test.patch  0002-32bit-friendly-format-in-vmod-tcp.patch  0003-Output-the-health-state-as-baseline-information.patch  series
debian/tests/: test.vcl
docs/: vmod_cookie.rst  vmod_header.rst  vmod_saintmode.rst  vmod_softpurge.rst  vmod_tcp.rst  vmod_var.rst  vmod_vsthrottle.rst  vmod_xkey.rst
src/: Makefile.am  vmod_bodyaccess.c  vmod_bodyaccess.vcc  vmod_config.h  vmod_cookie.c  vmod_cookie.vcc  vmod_header.c  vmod_header.vcc  vmod_saintmode.c  vmod_saintmode.vcc  vmod_softpurge.c  vmod_softpurge.vcc  vmod_tcp.c  vmod_tcp.vcc  vmod_var.c  vmod_var.vcc  vmod_vsthrottle.c  vmod_vsthrottle.vcc  vmod_xkey.c  vmod_xkey.vcc
src/tests/bodyaccess/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc
src/tests/cookie/: 04-filter_except.vtc  05-filter.vtc  06-concurrent-query.vtc  08-overflow.vtc  10-parser.vtc
src/tests/saintmode/: test01.vtc  test03.vtc  test04.vtc  test05.vtc
src/tests/tcp/: 01-dumpinfo.vtc  02-congestion.vtc  03-read-tcpinfo.vtc  04-pacing.vtc
src/tests/var/: test01.vtc  test04.vtc
src/tests/vsthrottle/: test01.vtc  test03.vtc
src/tests/xkey/: test01.vtc  test02.vtc  test03.vtc  test05.vtc  test06.vtc  test07.vtc  test08.vtc
